--- a/components/layout/navigation/main-navigation.module.css
+++ b/components/layout/navigation/main-navigation.module.css
@@ -7,6 +7,20 @@
   padding: 0 10%;
 }
 
+.placeholder {
+  display: block;
+  margin: auto;
+  position: relative;
+}
+
+.placeholder > img {
+  position: absolute;
+  right: 8%;
+  border-radius: 50%;
+  display: block;
+  margin: 1rem auto;
+}
+
 .darkBg {
   background-color: var(--color-grey-700);
 }
