--- a/components/layout/navigation/main-navigation.module.css
+++ b/components/layout/navigation/main-navigation.module.css
@@ -22,6 +22,30 @@
   z-index: 2;
 }
 
+.tooltip {
+  opacity: 0;
+  position: fixed;
+  right: 8%;
+  top: 30%;
+  z-index: 2;
+  width: 200px;
+  padding: 10px;
+  border-radius: 10px;
+  background: #000;
+  color: #fff;
+  text-align: center;
+}
+
+.placeholder > img:hover {
+  cursor: pointer;
+}
+
+.placeholder > img:hover + .tooltip {
+  opacity: 1;
+  transition: 1s;
+  cursor: pointer;
+}
+
 .darkBg {
   background-color: var(--color-grey-700);
 }
@@ -153,5 +177,16 @@
     right: 1%;
     width: 80px;
     height: 80px;
+  }
+}
+
+@media (hover: hover) {
+  .placeholder > img:hover + .tooltip {
+    opacity: 1;
+  }
+}
+@media (hover: none) {
+  .placeholder > img:hover + .tooltip {
+    opacity: 1;
   }
 }
