worked a bit more on color scheme

--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -1,20 +1,12 @@
 .heroDark {
   text-align: center;
-  background-image: linear-gradient(
-    to bottom,
-    var(--color-grey-900),
-    var(--color-grey-500)
-  );
+  background-color: var(--color-grey-800);
   padding: var(--size-8) 0;
 }
 
 .heroLight {
   text-align: center;
-  background-image: linear-gradient(
-    to bottom,
-    var(--color-grey-700),
-    var(--color-grey-500)
-  );
+  background-color: var(--color-primary-500);
   padding: var(--size-8) 0;
   color: white;
 }
