--- a/components/layout/navigation/main-navigation.module.css
+++ b/components/layout/navigation/main-navigation.module.css
@@ -1,16 +1,19 @@
 .header {
   width: 100%;
-  height: 4rem;
+  height: 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 10%;
+  position: fixed;
+  z-index: 3;
 }
 
 .placeholder {
   display: block;
   margin: auto;
   position: relative;
+  padding-top: 5rem;
 }
 
 .placeholder > img {
@@ -46,14 +49,6 @@
   cursor: pointer;
 }
 
-.darkBg {
-  background-color: var(--color-grey-700);
-}
-
-.lightBg {
-  background-color: var(--color-grey-400);
-}
-
 .header ul {
   list-style: none;
   display: flex;
@@ -86,6 +81,7 @@
   position: relative;
   display: block;
   background-color: #ebebeb;
+
   border-radius: 200px;
   box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
     inset 0px -5px 15px rgba(255, 255, 255 0.4);
@@ -112,7 +108,7 @@
 }
 
 .input:checked + .label {
-  background-color: #242424;
+  background-color: #333232;
 }
 
 .input:checked + label:after {
@@ -154,13 +150,6 @@
 }
 
 @media (max-width: 480px) {
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: space-between;
-    padding: 1rem;
-  }
-
   .header a {
     font-size: var(--size-5);
   }
@@ -175,6 +164,7 @@
 
   .placeholder > img {
     right: 1%;
+    top: 12%;
     width: 80px;
     height: 80px;
   }
