add 2 more articles

--- a/components/posts/postContent/postContent.module.css
+++ b/components/posts/postContent/postContent.module.css
@@ -48,7 +48,9 @@
 
 .image {
   object-fit: contain;
-  width: 100% !important;
+  max-width: 100% !important;
+  display: block;
+  margin: auto;
   position: relative !important;
   height: unset !important;
 }
