--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -12,13 +12,62 @@
   color: white;
 }
 
+.heroHeader {
+  font-size: 3rem;
+}
+
+.heroText {
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.lg {
+  font-size: 1.6rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.flexChild {
+  margin: 1rem;
+  width: 50rem;
+}
+
 .image {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
   overflow: hidden;
   margin: auto;
+}
+
+@media (max-width: 998px) {
+  .flex {
+    flex-direction: column-reverse;
+  }
+
+  .flexChild {
+    width: auto;
+  }
+
+  .heroText {
+    font-size: 1.2rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .heroText {
+    font-size: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    text-align: center;
+  }
 }
 
 .image img {
