--- a/components/posts/allPosts/postItem.module.css
+++ b/components/posts/allPosts/postItem.module.css
@@ -2,6 +2,7 @@
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   text-align: center;
   border-radius: var(--size-4);
+  width: 20rem;
 }
 
 .post a {
