--- a/components/contact/contactForm.module.css
+++ b/components/contact/contactForm.module.css
@@ -40,6 +40,7 @@
   border: 1px solid var(--color-grey-400);
   background-color: var(--color-grey-50);
   resize: none;
+  color: #000;
 }
 
 .controls {
