--- a/components/posts/postContent/postContent.module.css
+++ b/components/posts/postContent/postContent.module.css
@@ -23,13 +23,13 @@
 .copyBtn {
   color: #ccc;
   background: #000;
+  width: 2.5rem;
   border: 3px solid #ccc;
   border-radius: 15%;
   z-index: 1;
   position: absolute;
-  top: 0.3%;
+  top: 5%;
   left: 95%;
-  /* padding: 10px; */
 }
 
 .copyBtn:focus {
@@ -65,5 +65,6 @@
 @media (max-width: 768px) {
   .copyBtn {
     left: 85%;
+    top: 1%;
   }
 }
