--- a/components/posts/allPosts/postItem.module.css
+++ b/components/posts/allPosts/postItem.module.css
@@ -3,6 +3,9 @@
   text-align: center;
   border-radius: var(--size-4);
   width: 20rem;
+  display: block;
+  margin: auto;
+  /* height: 30rem; */
 }
 
 .post a {
@@ -11,7 +14,7 @@
 
 .image {
   width: 100%;
-  max-height: 20rem;
+  height: 15rem;
   overflow: hidden;
 }
 
