--- a/components/posts/allPosts/postItem.module.css
+++ b/components/posts/allPosts/postItem.module.css
@@ -3,9 +3,10 @@
   text-align: center;
   border-radius: var(--size-4);
   width: 20rem;
+  height: 35rem;
   display: block;
   margin: auto;
-  /* height: 30rem; */
+  height: 35rem;
 }
 
 .post a {
